# invporis

./: Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  rust.yml
src/: cli.rs  error.rs  main.rs
src/cli/: command.rs  commands.rs  parser.rs
src/command/: add.rs  get_total_value.rs  import.rs  mod.rs
src/data/: db.rs  mod.rs  sqlite.rs  trade_store.rs
src/domain/: event.rs  trade.rs
