[package]
name = "invporis"
version = "0.1.0"
edition = "2024"
description = "Investment portfolio tool"
license = "MIT"
repository = "https://github.com/Casper-Olsen/invporis"
categories = ["command-line-utilities", "finance"]
keywords = ["cli"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
thiserror = "2.0.18"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
